Implementing tag autocomplete

--- a/schema/db/additional.tmpl
+++ b/schema/db/additional.tmpl
@@ -4,4 +4,8 @@
         // StaticField defined by templates.
         Distance float64 `json:"distance,omitempty"`
     {{- end }}
+    {{- if eq $.Name "Address" }}
+        // StaticField defined by templates.
+        Distance float64 `json:"distance,omitempty"`
+    {{- end }}
 {{ end }}
